<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/manage_action_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/gradient_accent_pink_reversed"
        android:elevation="12dp"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="Manage discounts"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/manage_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start|left"
        android:elevation="18dp"
        android:padding="14dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/colorPrimaryWhite" />

    <ImageView
        android:id="@+id/manage_more_options"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="top|right"
        android:elevation="18dp"
        android:padding="14dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:tint="@color/colorPrimaryWhite" />

    <ListView
        android:id="@+id/list_discounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient_blue" />
</FrameLayout>