<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_white_wavy_overlay" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="false"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="42sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/email"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#bfffffff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#bfffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <com.tl.discountsaroundme.ui_controllers.AnimCheckBox
                android:id="@+id/cbBusinessAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:checked="false"
                app:circle_color="@color/colorPrice"
                app:stroke_color="@color/colorPrimaryWhite"
                app:stroke_width="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Business Account"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="20sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/etShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#bfffffff"
            android:hint="Enter your shop's name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#bfffffff"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/sShopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownSelector="@color/colorPrimaryWhite"
            android:dropDownWidth="match_parent"
            android:textAlignment="center"
            android:background="@drawable/button_bordered_transparent"
            android:visibility="gone" />

        <Button
            android:id="@+id/tagShopOnMap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bordered_transparent"
            android:text="Location"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:background="@drawable/button_main_style"
            android:text="register"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_main_style"
            android:text="Already have an account"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>